[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Tamás Tóth <tomjtoth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
jsonpickle = "1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
